It's coordination, not cooperation

--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ defaults:
       path: ""
     values:
       layout: "default"
-      title: "Semantics, Reasoning, Cooperation"
+      title: "Semantics, Reasoning, Coordination"
